--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "flowbite-svelte": "^0.44.18",
-    "flowbite-svelte-icons": "^0.4.4"
+    "flowbite-svelte-icons": "^0.4.4",
+    "svelte-sound": "^0.6.0"
   }
 }
