--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "type": "module",
   "dependencies": {
     "axios": "^1.5.1",
+    "fetch": "^1.1.0",
     "flowbite-svelte": "^0.44.18",
     "flowbite-svelte-icons": "^0.4.4",
     "svelte-sound": "^0.6.0"
