--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@skeletonlabs/skeleton": "^2.2.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
     "autoprefixer": "^10.4.14",
@@ -17,6 +18,7 @@
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.0.5",
     "svelte-check": "^3.4.3",
+    "svelte-highlight": "^7.3.0",
     "tailwindcss": "^3.3.2",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
@@ -28,6 +30,7 @@
     "fetch": "^1.1.0",
     "flowbite-svelte": "^0.44.18",
     "flowbite-svelte-icons": "^0.4.4",
+    "highlight.js": "^11.8.0",
     "howl": "^0.2.0",
     "howler": "^2.2.4",
     "svelte-pdf": "^1.0.20",
