--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@magidoc/plugin-svelte-marked": "^4.1.2",
     "@skeletonlabs/skeleton": "^2.2.0",
     "@sveltejs/adapter-auto": "^2.0.0",
     "@sveltejs/kit": "^1.20.4",
+    "@types/marked": "^6.0.0",
     "autoprefixer": "^10.4.14",
+    "marked": "^9.1.1",
+    "mdsvex": "^0.11.0",
     "postcss": "^8.4.24",
     "postcss-load-config": "^4.0.1",
     "svelte": "^4.0.5",
@@ -26,8 +30,10 @@
   },
   "type": "module",
   "dependencies": {
+    "@sveltejs/pancake": "^0.0.18",
     "axios": "^1.5.1",
     "carbon-components-svelte": "^0.80.0",
+    "d3": "^7.8.5",
     "fetch": "^1.1.0",
     "flowbite-svelte": "^0.44.18",
     "flowbite-svelte-icons": "^0.4.4",
@@ -36,7 +42,9 @@
     "howler": "^2.2.4",
     "nodemailer": "^6.9.5",
     "papaparse": "^5.4.1",
+    "snarkdown": "^2.0.0",
     "svelte-email": "^0.0.4",
+    "svelte-markdown": "^0.4.0",
     "svelte-pdf": "^1.0.20",
     "svelte-sound": "^0.6.0",
     "tone": "^14.7.77"
